[tool.poetry]
name = "tiny_python_projects"
version = "0.1.0"
description = "practicing the examples from the book - Tiny Python Projects"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pylint = "^2.6.0"
ipython = "^7.19.0"
pytest = "^6.2.1"
coverage = {version = "^5.3.1", extras = ["toml"]}
python-language-server = "^0.36.2"
pytest-testmon = "^1.0.3"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
